<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <GVL Name="COM" Id="{34a59a86-ea11-4ac6-84d9-4bbe8ae687ea}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bEnable			: BOOL := FALSE;
	bCouple			: BOOL := FALSE;
	bReset			: BOOL := FALSE;
	bHome			: BOOL := FALSE;
	
	bMoveX			: BOOL;
	bMoveY			: BOOL;
	bMoveZ			: BOOL;
	bRelZ			: BOOL;
	bSetZ			: BOOL;
	
	bValid			: BOOL;
	bHomeDone		: BOOL;
	bHomeBusy		: BOOL;
	bMoveDone		: BOOL;
	bMoveXDone		: BOOL;
	bMoveYDone		: BOOL;
	bMoveZDone		: BOOL;
	bMoveZRelDone   : BOOL;
	bMoveBusy		: BOOL;
	bError 			: BOOL;	
	
	inUSe 			: BOOL;
	IFerror			: BOOL;
	
	JSONFromFile 	: STRING(2047);
	JSONFILE		: STRING (2047);
	sendCommand 	: STRING;
	
	Xval			: INT;
	Yval			: INT;
	Zval			: INT;
	
	goX				: INT := 10;
	goY				: INT := 10;
	goZ				: INT := 10;
	
	object1			: INT := 0;
	object2			: INT := 0;
	
	absX 			: INT := 0;
	absY 			: INT := 0;
	absZ 			: INT := 0;
	relZ   			: INT := 0;
	            	
	velX 			: INT := 100;	//0-400
	velY 			: INT := 100;	//0-400
	velZ 			: INT := 2;		//0-10
	
	PosX 			: LREAL;
	PosY 			: LREAL;
	PosZ 			: LREAL;
	
	objectNum		: INT := 1;
	objectread		: BOOL;
	objectx			: LREAL;
	objecty			: LREAL;
	readfile        : BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>